force-app/main/default/objects/Work_Clearance__c.object
<CustomObject>
    <fields>
        <fullName>AGT_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AGT</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (AGT)</relationshipLabel>
        <relationshipName>Work_Clearance9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AGT__c</fullName>
        <label>AGT</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_or_Bearer_Telephone__c</fullName>
        <label>Applicant or Bearer Telephone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_or_Bearer_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Bearer</label>
        <referenceTo>THOR_Applicant_Bearer__c</referenceTo>
        <relationshipLabel>Work Clearance</relationshipLabel>
        <relationshipName>Work_Clearance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_or_Bearer__c</fullName>
        <label>Applicant or Bearer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Date_Month__c</fullName>
        <formula>CASE(MONTH(  Authorized_Date_UI__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) &amp; &quot; &quot; &amp; TEXT(Year(  Authorized_Date_UI__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorized Date (Month)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Date_UI__c</fullName>
        <label>Authorized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorized_Date__c</fullName>
        <label>Authorized Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Indicator_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Indicator</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Authorized Indicator)</relationshipLabel>
        <relationshipName>Work_Clearance8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Indicator__c</fullName>
        <label>Authorized Indicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signatory_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Signatory</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Authorized Signatory)</relationshipLabel>
        <relationshipName>Work_Clearance4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Signatory__c</fullName>
        <label>Authorized Signatory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signature_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Signature</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Authorized Signature)</relationshipLabel>
        <relationshipName>Work_Clearance7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Signature__c</fullName>
        <label>Authorized Signature</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Time_UI__c</fullName>
        <label>Authorized Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Authorized_Time__c</fullName>
        <label>Authorized Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer1_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bearer 1</label>
        <referenceTo>THOR_Applicant_Bearer__c</referenceTo>
        <relationshipLabel>Work Clearance (Bearer 1)</relationshipLabel>
        <relationshipName>Work_Clearance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bearer1__c</fullName>
        <label>Bearer1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer2_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bearer 2</label>
        <referenceTo>THOR_Applicant_Bearer__c</referenceTo>
        <relationshipLabel>Work Clearance (Bearer 2)</relationshipLabel>
        <relationshipName>Work_Clearance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bearer2__c</fullName>
        <label>Bearer2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer3_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bearer 3</label>
        <referenceTo>THOR_Applicant_Bearer__c</referenceTo>
        <relationshipLabel>Work Clearance (Bearer3)</relationshipLabel>
        <relationshipName>Work_Clearance3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bearer3__c</fullName>
        <label>Bearer3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Valv_Remark__c</fullName>
        <label>Block Valv Remark</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Valv__c</fullName>
        <label>Block Valv</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_gas__c</fullName>
        <label>Block gas</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_go_wrong1__c</fullName>
        <label>Can go wrong1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_go_wrong2__c</fullName>
        <label>Can go wrong2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_go_wrong3__c</fullName>
        <label>Can go wrong3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause1__c</fullName>
        <label>Cause1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause2__c</fullName>
        <label>Cause2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause3__c</fullName>
        <label>Cause3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Date_UI__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Time_UI__c</fullName>
        <label>Check Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Check_Time__c</fullName>
        <label>Check Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseApplicantorBearer_PISUser_Text__c</fullName>
        <description>Host Id or Home Id for sync data to SAP Integration</description>
        <label>Close Applicant or Bearer Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Applicant_or_Bearer_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant or Bearer (ผู้ขออนุญาตปิดงาน)</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Close Applicant or Bearer)</relationshipLabel>
        <relationshipName>Work_Clearance3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Applicant_or_Bearer__c</fullName>
        <label>Close Applicant or Bearer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Authorized_Sign_Indc__c</fullName>
        <label>Close Authorized Sign.Indc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Authorized_Sign_off_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close Authorized Sign.off</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Close Authorized Sign.off)</relationshipLabel>
        <relationshipName>Work_Clearance6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Authorized_Sign_off__c</fullName>
        <label>Close Authorized Sign.off</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtendApplicantOrBearer_PISUser_Text__c</fullName>
        <description>Host Id or Home Id for sync data to SAP Integration</description>
        <label>Extend Applicant or Bearer Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Applicant_or_Bearer_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant or Bearer(ผู้ขออนุญาตขยายเวลา)</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Extend Applicant or Bearer)</relationshipLabel>
        <relationshipName>Work_Clearance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extend_Applicant_or_Bearer__c</fullName>
        <label>Extend Applicant or Bearer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Authorized_Sign_Indc__c</fullName>
        <label>Extend Authorized Sign.Indc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Authorized_Sign_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extend Authorized Sign</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Extend Authorized Sign)</relationshipLabel>
        <relationshipName>Work_Clearance5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extend_Authorized_Sign__c</fullName>
        <label>Extend Authorized Sign.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Date__c</fullName>
        <label>Extend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extend_No__c</fullName>
        <label>Extend No</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Time_Flag_Formula__c</fullName>
        <formula>IF( Extend_Time_Flag__c == &apos;X&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extend Time Flag Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extend_Time_Flag__c</fullName>
        <label>Extend Time Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Time_To_UI__c</fullName>
        <label>Extend Time To</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Extend_Time_To__c</fullName>
        <label>Extend Time To</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Time__c</fullName>
        <label>Extend Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Fire_Watch_Stand_By__c</fullName>
        <label>Fire Watch Stand By</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flamable_amt__c</fullName>
        <label>Flamable amt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flamable_gas__c</fullName>
        <label>Flamable gas</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionalLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Work Clearance</relationshipLabel>
        <relationshipName>Work_Clearance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <formula>IF(
	NOT(ISBLANK(FunctionalLocation__c)),
	FunctionalLocation__r.Name,
	IF( 
		NOT(ISBLANK(Order__c)),
		Order__r.Functional_Location__r.Name,
		IF(
			NOT(ISBLANK(Notification__c)),
			Notification__r.Functional_Location__r.Name,
			FunctionalLocation__r.Name
		)
	)
)</formula>
        <label>Functional Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Risk_Work__c</fullName>
        <label>High risk work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>งานทั่วไป</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Hot work</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Confined Space</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Crane/Lifting</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Radiation</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Jack Hammer</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>High Pressure Water Jet</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Digging</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Work at Height</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Online Stop Leak</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Non Type Of Work</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCheckingGas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ไม่ต้องตรวจวัดก๊าซ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isolate_Breaker__c</fullName>
        <label>Isolate Breaker</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isolate_Elec__c</fullName>
        <label>Isolate Elec</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINK__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/cmp/c__THOR_WorkClearanceRecordDisplay?c__recordId=&quot; +  Id + &quot;&amp;c__backToTabIndex=1&quot; + &quot;&amp;c__tab=WorkClearance&quot;, &quot;LINK TO RECORD&quot;)</formula>
        <label>LINK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_User_Action_Status__c</fullName>
        <label>Last User Action Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_User_Action__c</fullName>
        <label>Last User Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>IF(ISBLANK(Order__r.Location__c), Notification__r.Location__c, Order__r.Location__c)</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_off_RCU__c</fullName>
        <label>Lock off RCU</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPAC__c</fullName>
        <formula>IF(MaintenancePlantText__c = &apos;4200&apos;,&apos;TLB&apos;,
IF(MaintenancePlantText__c = &apos;3200&apos;,&apos;TPX&apos;,
IF(MaintenancePlantText__c = &apos;7200&apos;,&apos;LABIX&apos;,
IF(MaintenancePlantText__c = &apos;8200&apos;,&apos;SPP&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;T1&apos;),&apos;TOC1&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;T2&apos;),&apos;TOC2&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;T3&apos;),&apos;TOC3&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;T4&apos;),&apos;TOC4&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;T5&apos;),&apos;TOC5&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;UT&apos;),&apos;UTILITY&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;UT2&apos;),&apos;UTILITY&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;MO&apos;),&apos;MOVEMENT&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;OF&apos;),&apos;OFFSITE&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;OC1&apos;),&apos;CFP&apos;,
IF(AND(MaintenancePlantText__c = &apos;1200&apos;,Area_Code__c = &apos;OC3&apos;),&apos;CFP&apos;,&quot;&quot;)
)
)
)
)
)
)
)
)
)
)
))))</formula>
        <label>WorkAtPlot Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Text__c</fullName>
        <label>Main Work Center Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>It must be a valid Main Work Center from Master Map</errorMessage>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Main Work Center</value>
            </filterItems>
            <infoMessage>Choose a Main Work Center from Master Map</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Work Clearances</relationshipLabel>
        <relationshipName>Work_Clearances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_for_Report__c</fullName>
        <formula>Authorized_Signature_UI__r.User__r.Main_Work_Center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenancePlantText__c</fullName>
        <label>Maintenance plant Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <formula>IF(ISBLANK(Order__r.Maintenance_Plant__c), IF(ISBLANK(Notification__r.Maintenance_Plant__c), FunctionalLocation__r.Maintenance_Plant__r.Name ,Notification__r.Maintenance_Plant__c), Order__r.Maintenance_Plant__c)</formula>
        <label>Maintenance Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Unit__c</fullName>
        <label>Maintenance Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)  &amp; &quot; &quot; &amp;  TEXT(Year(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Work Clearances</relationshipLabel>
        <relationshipName>Work_Clearances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPSMainWorkCenter__c</fullName>
        <formula>IF(MaintenancePlantText__c == &apos;4200&apos;, &apos;OPS-TLB&apos;,
 IF(MaintenancePlantText__c == &apos;3200&apos;, &apos;OPS-TPX&apos;,
  IF(MaintenancePlantText__c == &apos;7200&apos;, &apos;OPS-LABI&apos;,
   IF(MaintenancePlantText__c == &apos;8200&apos;, &apos;OPS-SPP&apos;,
    IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), Area_Code__c == &apos;T1&apos;), &apos;OPS-TOC1&apos;,
     IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), Area_Code__c == &apos;T2&apos;), &apos;OPS-TOC2&apos;,
      IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), Area_Code__c == &apos;T3&apos;), &apos;OPS-TOC3&apos;, 
       IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), Area_Code__c == &apos;T4&apos;), &apos;OPS-TOC4&apos;, 
        IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), Area_Code__c == &apos;T5&apos;), &apos;OPS-TOC5&apos;, 
         IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), OR(Area_Code__c == &apos;UT&apos;, Area_Code__c == &apos;UT2&apos;)), &apos;OPS-UTIL&apos;, 
          IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), Area_Code__c == &apos;MO&apos;), &apos;OPS-MOVE&apos;, 
           IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), Area_Code__c == &apos;OF&apos;), &apos;OPS-OFFS&apos;,
            IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), OR(Area_Code__c == &apos;ID1&apos;, Area_Code__c == &apos;OC&apos;)), &apos;OPS-TOC1 OPS-TOC2 OPS-TOC3 OPS-TOC4 OPS-TOC5 OPS-UTIL OPS-MOV OPS-OFFS&apos;, &apos;&apos;)))))))))))))</formula>
        <label>OPS Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Stand_by__c</fullName>
        <label>Operation Stand by</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Work Clearances</relationshipLabel>
        <relationshipName>Work_Clearances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oxygen__c</fullName>
        <label>Oxygen</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oxygen_amt__c</fullName>
        <label>Oxygen amt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE1__c</fullName>
        <label>PPE1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE2__c</fullName>
        <label>PPE2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE3__c</fullName>
        <label>PPE3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE_Flag__c</fullName>
        <label>PPE Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_flag__c</fullName>
        <label>Permit flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Plant</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Insert a Master Map record with type: Plant</errorMessage>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Work Clearances (Planning Plant)</relationshipLabel>
        <relationshipName>Work_Clearances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Section__c</fullName>
        <formula>IF(ISBLANK(Order__r.Plant_Section__c), Notification__r.Plant_Section__c, Order__r.Plant_Section__c)</formula>
        <label>Plant Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent1__c</fullName>
        <label>Prevent1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent2__c</fullName>
        <label>Prevent2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent3__c</fullName>
        <label>Prevent3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Map__c</fullName>
        <formula>IF( ISPICKVAL(Priority__c, &apos;1&apos;) , &apos;Immediately&apos;, 
 IF(ISPICKVAL(Priority__c, &apos;2&apos;) , &apos;Urgent&apos;,  
  IF(ISPICKVAL(Priority__c, &apos;3&apos;), &apos;Normal&apos;,  
   IF(ISPICKVAL(Priority__c, &apos;A&apos;), &apos;Float Time - 1M&apos;,  
    IF(ISPICKVAL(Priority__c, &apos;C&apos;), &apos;Float Time - 3M&apos;,
     IF(ISPICKVAL(Priority__c, &apos;F&apos;), &apos;Float Time - 6M&apos;, 
      IF(ISPICKVAL(Priority__c, &apos;I&apos;), &apos;Float Time - 9M&apos;,
       IF(ISPICKVAL(Priority__c, &apos;L&apos;), &apos;Float Time - 12M&apos;,
        IF(ISPICKVAL(Priority__c, &apos;O&apos;), &apos;Float Time - 15M&apos;,
         IF(ISPICKVAL(Priority__c, &apos;R&apos;), &apos;Float Time - 18M&apos;, &apos;&apos; ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Immediately</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Urgent</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>Float Time - 1M</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Float Time - 3M</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Float Time - 6M</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Float Time - 9M</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Float Time - 12M</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>Float Time - 15M</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Float Time - 18M</label>
                </value>
                <value>
                    <fullName>Immediately</fullName>
                    <isActive>false</isActive>
                    <label>Immediately</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <isActive>false</isActive>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                    <isActive>false</isActive>
                    <label>Urgent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reduce_Pressure__c</fullName>
        <label>Reduce Pressure</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rejected By</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Rejected By)</relationshipLabel>
        <relationshipName>Work_ClearanceSvhz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Extend_Date__c</fullName>
        <label>Request Extend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Extend_Time__c</fullName>
        <label>Request Extend Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Requester_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance (Requester)</relationshipLabel>
        <relationshipName>Work_Clearance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Permit1_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Safety Permit 1</label>
        <referenceTo>Safety_Permit__c</referenceTo>
        <relationshipLabel>Work Clearance</relationshipLabel>
        <relationshipName>Work_Clearance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Safety_Permit1__c</fullName>
        <label>Safety Permit1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Permit2_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Safety Permit 2</label>
        <referenceTo>Safety_Permit__c</referenceTo>
        <relationshipLabel>Work Clearance (Safety Permit 2)</relationshipLabel>
        <relationshipName>Work_Clearance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Safety_Permit2__c</fullName>
        <label>Safety Permit2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Permit3_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Safety Permit 3</label>
        <referenceTo>Safety_Permit__c</referenceTo>
        <relationshipLabel>Work Clearance (Safety Permit 3)</relationshipLabel>
        <relationshipName>Work_Clearance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Safety_Permit3__c</fullName>
        <label>Safety Permit3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>